# sway.module_gapi-dummy

./: .gitmodules  CMakeLists.txt  README.md
include/sway/gapi/: dummy.h  dummy.hpp
include/sway/gapi/dummy/: buffer.h  buffer.hpp  bufferidqueueimpl.hpp  capability.h  capability.hpp  drawcall.h  drawcall.hpp  prereqs.h  prereqs.hpp  shader.h  shader.hpp  shaderprogram.h  shaderprogram.hpp  vertexlayout.h  vertexlayout.hpp  viewport.h  viewport.hpp
src/: buffer.cpp  capability.cpp  drawcall.cpp  plug.cpp  shader.cpp  shaderprogram.cpp  vertexlayout.cpp  viewport.cpp
